--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 aioredis==1.3.1
+amqp==2.6.0
 asgiref==3.2.7
 async-timeout==3.0.1
 attrs==19.3.0
 autobahn==20.4.3
 Automat==20.2.0
+billiard==3.6.3.0
+celery==4.4.4
 certifi==2020.4.5.1
 cffi==1.14.0
 channels==2.4.0
@@ -15,13 +18,18 @@ daphne==2.5.0
 defusedxml==0.6.0
 Django==3.0.6
 django-allauth==0.41.0
+django-celery-beat==2.0.0
 django-multi-form-view==2.0.1
 django-sslserver==0.22
+django-timezone-field==4.0
+future==0.18.2
 gunicorn==20.0.4
 hiredis==1.0.1
 hyperlink==19.0.0
 idna==2.9
+importlib-metadata==1.6.0
 incremental==17.5.0
+kombu==4.6.10
 msgpack==0.6.2
 oauthlib==3.1.0
 Pillow==7.1.2
@@ -31,6 +39,8 @@ pyasn1-modules==0.2.8
 pycparser==2.20
 PyHamcrest==2.0.2
 pyOpenSSL==19.1.0
+python-crontab==2.5.1
+python-dateutil==2.8.1
 python3-openid==3.1.0
 pytz==2020.1
 requests==2.23.0
@@ -41,4 +51,6 @@ sqlparse==0.3.1
 Twisted==20.3.0
 txaio==20.4.1
 urllib3==1.25.9
+vine==1.3.0
+zipp==3.1.0
 zope.interface==5.1.0
