--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ Django==3.0.6
 django-allauth==0.41.0
 django-celery-beat==2.0.0
 django-multi-form-view==2.0.1
+django-qr-code==1.2.0
 django-sslserver==0.22
 django-timezone-field==4.0
 future==0.18.2
@@ -43,6 +44,7 @@ python-crontab==2.5.1
 python-dateutil==2.8.1
 python3-openid==3.1.0
 pytz==2020.1
+qrcode==6.1
 requests==2.23.0
 requests-oauthlib==1.3.0
 service-identity==18.1.0
